# pipen-args

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  README.rst  example.py  pipen_args.py  pyproject.toml  setup.py  tox.ini
.codesandbox/: Dockerfile
.github/workflows/: build.yml
docs/: CHANGELOG.md
examples/: config-multi.toml  config.toml  example-config.py  example-desc-group.py  example-extra-args.py  example-hide-args.py  example-multprocesses.py  example.py
pipen_args/: __init__.py  defaults.py  install.py  parser.py  parser_.py  plugin.py  procgroup.py  utils.py
tests/: conftest.py  run_pipeline.py  test_import_config.py  test_multi_proc.py  test_parser.py  test_plugin.py  test_proc_group.py  test_single_proc.py  test_utils.py
tests/configs/: .pipen.toml  process_with_config.toml
tests/pipelines/: bare_config.py  multiprocesses.py  multiprocesses_args_hide.py  proc_group.py  proc_group_as_pipen.py  proc_group_integrate.py  process_with_config.py  single.py  single_extra_args.py  single_files.py  single_list_option.py  single_outdir_workdir.py  single_required_with_default.py  single_sched_config.py  two_pipelines.py
