[tool.poetry]
name = "pipen-args"
version = "0.3.4"
description = "Command-line argument parser for pipen."
authors = ["pwwang <pwwang@pwwang.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/pwwang/pipen-args"
repository = "https://github.com/pwwang/pipen-args"

[tool.poetry.dependencies]
python = "^3.7.1"
pipen = "^0.3"
pardoc = "^0.1"
# # required by pipen
# pyparam = "^0.5"
# diot = "^0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"


[tool.black]
line-length = 80
target-version = ['py37', 'py38', 'py39']
include = '\.pyi?$'
