[tool.poetry]
name = "pipen-args"
version = "0.16.3"
description = "Command-line argument parser for pipen."
authors = ["pwwang <pwwang@pwwang.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/pwwang/pipen-args"
repository = "https://github.com/pwwang/pipen-args"

[tool.poetry.build]
generate-setup-file = true

[tool.poetry.dependencies]
python = "^3.9"
# pipen = "^0.15.5"
pipen-annotate = "^0.14"

[tool.poetry.dev-dependencies]
pytest = "^8"
pytest-cov = "^6"
pytest-xdist = "^3"
pytest-forked = "^1"
pipen-verbose = "^0.12"

[tool.poetry.plugins.pipen]
args = "pipen_args.plugin:ArgsPlugin"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-v -n auto --cov pipen_args --cov-report xml:.coverage.xml --cov-report term-missing"
filterwarnings = [
    "error"
]
# console_output_style = "progress"
# junit_family = "xunit1"

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.mypy]
ignore_missing_imports = true
allow_redefinition = true
disable_error_code = ["attr-defined", "no-redef", "union-attr", "import"]
show_error_codes = true
strict_optional = false
